# cdc-survival-game

./: .gitignore  AGENTS.md  CLAUDE.md  clean_rust_target.bat  gdlintrc  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot  run_bevy_character_editor.bat  run_bevy_character_editor_play.bat  run_bevy_debug_viewer.bat  run_bevy_debug_viewer_play.bat  run_bevy_debug_viewer_release.bat  run_bevy_dialogue_editor.bat  run_bevy_game.bat  run_bevy_gltf_viewer.bat  run_bevy_gltf_viewer_play.bat  run_bevy_item_editor.bat  run_bevy_map_editor.bat  run_bevy_map_editor_play.bat  run_bevy_quest_editor.bat  run_bevy_recipe_editor.bat  run_bevy_server.bat  run_bevy_server_play.bat  run_bevy_skill_editor.bat  run_godot_editor.bat  run_godot_game.bat  run_godot_validate.bat  run_narrative_lab.bat  run_narrative_lab_regression.bat  run_narrative_sync_server.bat  run_tauri_editor.bat  run_tauri_editor_character.bat  run_tauri_editor_dialogues.bat  run_tauri_editor_items.bat  run_tauri_editor_quests.bat  清理工程目录.bat
native/jps_extension/: CMakeLists.txt  README.md  build_windows.ps1  native_jps.gdextension  native_jps.gdextension.uid
native/jps_extension/include/: native_jps_planner.h
native/jps_extension/src/: native_jps_planner.cpp  register_types.cpp  register_types.h
rust/: Cargo.toml  README.md
rust/apps/bevy_character_editor/: Cargo.toml
rust/apps/bevy_character_editor/src/: app.rs  camera_mode.rs  commands.rs  data.rs  handoff.rs  main.rs  preview.rs  state.rs  ui.rs
rust/apps/bevy_debug_viewer/: Cargo.toml
rust/apps/bevy_debug_viewer/src/: app.rs  bootstrap.rs  console.rs  controls.rs  dialogue.rs  game_ui.rs  geometry.rs  hud.rs  main.rs  profiling.rs  render.rs  simulation.rs  state.rs  ui_context_menu.rs
rust/apps/bevy_dialogue_editor/: Cargo.toml
rust/apps/bevy_dialogue_editor/src/: commands.rs  data.rs  graph.rs  ui.rs
rust/apps/bevy_gltf_viewer/: Cargo.toml
rust/apps/bevy_gltf_viewer/src/: app.rs  catalog.rs  commands.rs  main.rs  preview.rs  socket_editor.rs  state.rs  ui.rs
rust/apps/bevy_item_editor/: Cargo.toml
rust/apps/bevy_item_editor/src/: actions.rs  ai.rs  app.rs  commands.rs  data.rs  main.rs  preview.rs  state.rs  ui.rs
rust/apps/bevy_map_editor/: Cargo.toml
rust/apps/bevy_map_editor/src/: app.rs  camera.rs  commands.rs  handoff.rs  main.rs  map_ai.rs  scene.rs  selection.rs  selection_info.rs  selection_targets.rs  state.rs  ui.rs
rust/apps/bevy_quest_editor/: Cargo.toml
rust/apps/bevy_quest_editor/src/: commands.rs  data.rs  graph.rs  handoff.rs  main.rs  navigation.rs  state.rs  ui.rs
rust/apps/bevy_recipe_editor/: Cargo.toml
rust/apps/bevy_recipe_editor/src/: ai.rs  app.rs  commands.rs  data.rs  main.rs  navigation.rs  state.rs  ui.rs
rust/apps/bevy_server/: Cargo.toml
rust/apps/bevy_server/src/: app.rs  config.rs  main.rs  protocol.rs  reporting.rs  startup.rs  vision.rs
rust/apps/bevy_skill_editor/: Cargo.toml
rust/apps/bevy_skill_editor/src/: data.rs  main.rs
rust/apps/content_tools/: Cargo.toml
rust/apps/content_tools/src/: app.rs
rust/apps/narrative_sync_server/: Cargo.toml
rust/apps/narrative_sync_server/src/: main.rs
rust/assets/bevy_preview/placeholders/: README.txt  base_body.gltf.import  base_feet.gltf  base_feet.gltf.import  base_head.gltf  base_head.gltf.import  base_legs.gltf.import  equipment_accessory.gltf.import  equipment_back.gltf.import  equipment_body.gltf.import  equipment_feet.gltf  equipment_feet.gltf.import  equipment_hands.gltf  equipment_hands.gltf.import  equipment_head.gltf.import  equipment_legs.gltf.import  weapon_blunt.gltf.import  weapon_dagger.gltf  weapon_dagger.gltf.import  weapon_heavy.gltf.import  weapon_light.gltf.import  weapon_pistol.gltf.import  weapon_pole.gltf.import  weapon_rifle.gltf.import  weapon_shotgun.gltf  weapon_shotgun.gltf.import  weapon_sword.gltf.import  weapon_unarmed.gltf.import
rust/assets/container_placeholders/: cabinet_medical.gltf.import  crate_wood.gltf.import  locker_metal.gltf.import
rust/assets/world_tiles/building_wall_legacy/: corner.gltf.import  cross.gltf.import  end.gltf  end.gltf.import  isolated.gltf.import  straight.gltf  straight.gltf.import  t_junction.gltf.import
rust/assets/world_tiles/prop_placeholder_basic/: barrel_rust.gltf  barricade_scrap.gltf  pallet_stack.gltf
rust/assets/world_tiles/surface_placeholder_basic/: cliff_side.gltf  ramp_north.gltf  ramp_west.gltf
rust/crates/game_bevy/: Cargo.toml
rust/crates/game_bevy/src/: ai_spawn.rs  asset_paths.rs  bootstrap.rs  character_preview.rs  container_visuals.rs  content.rs  fonts.rs  item_preview.rs  lib.rs  logging.rs  mesh_picking.rs  new_game.rs  npc_life.rs  preview_3d.rs  reservations.rs  spawn.rs  static_world.rs  tile_world.rs  ui.rs
rust/crates/game_core/: Cargo.toml
rust/crates/game_core/src/: actor.rs  building.rs  building_geometry.rs  demo.rs  economy.rs  lib.rs  movement.rs  overworld.rs  runtime.rs  simulation.rs  survival.rs  vision.rs
rust/crates/game_data/src/: ai.rs  ai_content.rs  ai_preview.rs  appearance.rs  character.rs  content.rs  content_registry.rs  dialogue_rules.rs  dialogue_runtime.rs  file_backed.rs  interaction.rs  item_edit.rs  lib.rs  map.rs  map_edit.rs  models.rs  outdoor_transition.rs  overworld.rs  quest.rs  recipe_edit.rs  settlement.rs  shop.rs  skill.rs  world_tiles.rs
rust/crates/game_editor/: Cargo.toml
rust/crates/game_editor/src/: ai_chat.rs  character_preview.rs  editor_handoff.rs  flow_graph.rs  lib.rs  model_tools.rs  preview_stage.rs  primary_egui.rs
rust/crates/game_protocol/: Cargo.toml
rust/crates/game_protocol/src/: lib.rs  messages.rs  narrative.rs
tools/narrative_lab/src-tauri/: Cargo.toml  tauri.conf.json
tools/narrative_lab/src-tauri/capabilities/: default.json
tools/narrative_lab/src-tauri/src/: ai_provider.rs  ai_settings.rs  editor_menu.rs  lib.rs  main.rs  narrative_agent_actions.rs  narrative_app_settings.rs  narrative_context.rs  narrative_exports.rs  narrative_provider.rs  narrative_review.rs  (+3 more)
tools/tauri_editor/src-tauri/: Cargo.toml  tauri.conf.json  tauri.narrative.conf.json
(+3396 files in other folders)
