[workspace]
members = [
    "crates/game_core",
    "crates/game_data",
    "crates/game_bevy",
    "crates/game_protocol",
    "apps/bevy_server",
    "apps/bevy_debug_viewer",
    "apps/bevy_map_editor",
    "apps/bevy_character_editor",
    "apps/narrative_sync_server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["CDC Survival Game Team"]

[workspace.dependencies]
bevy = { version = "0.18.1" }
bevy_app = { version = "0.18.1", default-features = false, features = ["std"] }
bevy_ecs = { version = "0.18.1", default-features = false, features = ["std", "multi_threaded"] }
bevy_log = { version = "0.18.1" }
dogoap = { git = "https://github.com/victorb/dogoap.git", rev = "e429fd1c15b2eeb7e423609b3fdb954e1a5324da" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
