[package]
name = "bevy_character_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
bevy_egui = "0.39.1"
game_data = { path = "../../crates/game_data" }
game_editor = { path = "../../crates/game_editor" }
