[package]
name = "bevy_debug_viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
game_bevy = { path = "../../crates/game_bevy" }
game_core = { path = "../../crates/game_core" }
game_data = { path = "../../crates/game_data" }
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
