[package]
name = "bevy_debug_viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
bevy_mesh_outline = "0.3.0"
game_bevy = { path = "../../crates/game_bevy" }
game_core = { path = "../../crates/game_core" }
game_data = { path = "../../crates/game_data" }
game_editor = { path = "../../crates/game_editor" }
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
