[package]
name = "bevy_quest_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
bevy_egui = "0.39.1"
game_bevy = { path = "../../crates/game_bevy" }
game_data = { path = "../../crates/game_data" }
game_editor = { path = "../../crates/game_editor" }
serde.workspace = true
serde_json.workspace = true
