[package]
name = "game_bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
game_core = { path = "../game_core" }
game_data = { path = "../game_data" }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-log.workspace = true
