[package]
name = "game_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy_app.workspace = true
dogoap.workspace = true
game_data = { path = "../game_data" }
geo = "0.32"
geo-clipper = { version = "0.9", optional = true }
serde.workspace = true
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[features]
default = []
geo-clipper-fallback = ["dep:geo-clipper"]
