[package]
name = "cdc_narrative_lab"
version = "0.1.0"
description = "Standalone narrative lab for CDC Survival Game"
authors = ["CDC Survival Game Team"]
edition = "2021"

[lib]
name = "cdc_narrative_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
game_protocol = { path = "../../../rust/crates/game_protocol" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
