[package]
name = "cdc_narrative_lab"
version = "0.1.0"
description = "Standalone narrative lab for CDC Survival Game"
authors = ["CDC Survival Game Team"]
edition = "2021"

[lib]
name = "cdc_narrative_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
game_protocol = { path = "../../../rust/crates/game_protocol" }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "time"] }
tokio-util = "0.7"
trash = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
