[package]
name = "cdc_tauri_editor"
version = "0.1.0"
description = "Standalone content editor for CDC Survival Game"
authors = ["CDC Survival Game Team"]
edition = "2021"

[lib]
name = "cdc_tauri_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
game_data = { path = "../../../rust/crates/game_data" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
