[package]
name = "game_editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy.workspace = true
bevy_egui = "0.39.1"
dirs = "6"
game_bevy = { path = "../game_bevy" }
game_data = { path = "../game_data" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
